travis: disable coverage reporting from macOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ addons:
     packages:
     - gcc
     - openmpi
-    - lcov
     update: true
 
 cache:
@@ -113,12 +112,16 @@ script:  # multiplied by matrix envs and os settings
 
 after_success:
   - cd "${TRAVIS_BUILD_DIR}"
-  - lcov --directory build --capture --output-file coverage.info
-  # remove any system headers, 3rd party objects and the test code itself from the coverage report
-  # the absolute path is required to workaround an issue in lcov which makes it change its CWD in case of errors
-  - lcov --remove coverage.info '/usr/*' "${HOME}"'/deps/*' '*/tests/*' --output-file "${TRAVIS_BUILD_DIR}/coverage.info"
-  - lcov --list coverage.info
-  - bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+  # macOS needs `--gcov-tool /usr/local/bin/gcov-?`, but even then I couldn't make the Coverage run work
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ] ; then
+      lcov --directory build --capture --output-file coverage.info
+      # remove any system headers, 3rd party objects and the test code itself from the coverage report
+      # the absolute path is required to workaround an issue in lcov which makes it change its CWD in case of errors
+      lcov --remove coverage.info '/usr/*' "${HOME}"'/deps/*' '*/tests/*' --output-file "${TRAVIS_BUILD_DIR}/coverage.info"
+      lcov --list coverage.info
+      bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+    fi
 
 jobs:  # the following jobs inherit only the first OS
   include:
