--- a/Makefile.inc
+++ b/Makefile.inc
@@ -44,12 +44,13 @@
 #
 # For convenience, some variables can be set during compilation,
 # e.g. make `VARIABLE=value` (multiple variables are possible):
-# 1) OMP=0    : disable OpenMP compilation
-# 2) MPI=0    : disable MPI compilation
-# 3) GNU=0    : disable GNU compiler compilation and enable Intel compiler compilation
-# 4) CHECKS=1 : enable GNU compiler checks and DBCSR asserts
-# 5) CINT=1   : generate the C interface
-# 6) GPU=1,2  : enable GPU support (1: with CUDA, 2: with HIP)
+# 1) OMP=0     : disable OpenMP compilation
+# 2) MPI=0     : disable MPI compilation
+# 3) GNU=0     : disable GNU compiler and enable Intel compiler
+# 4) CHECKS=1  : enable GNU compiler checks and DBCSR asserts
+# 5) CINT=1    : generate the C interface
+# 6) GPU=1,2   : enable GPU support (1: with CUDA, 2: with HIP)
+# 7) OFFLOAD=1 : OpenMP/offload"
 #
 
 #######################################################################################
@@ -217,6 +218,14 @@ LIBS       += -lstdc++
 #FCFLAGS    := $(subst -D__DBCSR_ACC,-D__DBCSR_ACC=3,$(FCFLAGS))
 #NVFLAGS   += -D__DBCSR_ACC=3
 #LIBS       += -lhipblas
+endif
+
+#######################################################################################
+#
+# OpenMP/offload compilation. Use `make OFFLOAD=1` to enable it.
+
+ifeq ($(OFFLOAD),1)
+FCFLAGS    += -D__DBCSR_ACC
 endif
 
 #######################################################################################
