--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -195,6 +195,18 @@ endif ()
 
 if (OpenMP_FOUND)
   target_link_libraries(dbcsr PRIVATE OpenMP::OpenMP_Fortran)
+
+  if (USE_OFFLOAD)
+    add_subdirectory(acc/libsmm_omp)
+    target_sources(dbcsr PRIVATE $<TARGET_OBJECTS:libsmm_omp>)
+    target_compile_definitions(dbcsr PRIVATE __DBCSR_ACC)
+  endif ()
+endif ()
+
+# OpenMP/offload backend is built if no other backend is enabled
+if ((NOT USE_CUDA) AND (NOT USE_HIP))
+  add_subdirectory(acc/omp)
+  target_sources(dbcsr PRIVATE $<TARGET_OBJECTS:dbcsr_omp>)
 endif ()
 
 # =================================================================================================
