Enabled ACC interface test on Cray systems. To link the C-based test(s), use Fortran as linker language unless CMAKE_BUILD_TYPE matches Coverage-build (under MacOS linker error remain otherwise).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,19 +73,22 @@ set(dbcsr_test_acc_SRCS dbcsr_test_acc.c)
 foreach (dbcsr_ctests_simple ${DBCSR_CTESTS_SIMPLE})
   add_executable(${dbcsr_ctests_simple} ${${dbcsr_ctests_simple}_SRCS})
   target_link_libraries(${dbcsr_ctests_simple} dbcsr)
-  set_target_properties(${dbcsr_ctests_simple} PROPERTIES LINKER_LANGUAGE Fortran)
-  if (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
-    set_target_properties(${dbcsr_ctests_simple} PROPERTIES LINK_FLAGS "-nofor-main")
+  if (NOT CMAKE_BUILD_TYPE MATCHES Coverage)
+    set(dbcsr_ctests_link_lang Fortran)
+    if (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
+      set_target_properties(${dbcsr_ctests_simple} PROPERTIES LINK_FLAGS "-nofor-main")
+    endif ()
+  else () # avoid linker error under MacOS (llvm_gcda_emit_arcs)
+    set(dbcsr_ctests_link_lang C)
   endif ()
+  set_target_properties(${dbcsr_ctests_simple} PROPERTIES LINKER_LANGUAGE ${dbcsr_ctests_link_lang})
   if (OpenMP_FOUND)
-    target_link_libraries(${dbcsr_ctests_simple} OpenMP::OpenMP_Fortran)
+    target_link_libraries(${dbcsr_ctests_simple} OpenMP::OpenMP_${dbcsr_ctests_link_lang})
   endif ()
   # register C-tests executable that do not need additional arguments with CMake
-  if (NOT CMAKE_SYSTEM_NAME STREQUAL "CrayLinuxEnvironment")
-    add_test(NAME ${dbcsr_ctests_simple} COMMAND ./${dbcsr_ctests_simple})
-    if (OpenMP_FOUND)
-      set_tests_properties(${dbcsr_ctests_simple} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${TEST_OMP_THREADS})
-    endif ()
+  add_test(NAME ${dbcsr_ctests_simple} COMMAND ./${dbcsr_ctests_simple})
+  if (OpenMP_FOUND)
+    set_tests_properties(${dbcsr_ctests_simple} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${TEST_OMP_THREADS})
   endif ()
 endforeach ()
 
