--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -86,9 +86,11 @@ foreach (dbcsr_ctests_simple ${DBCSR_CTESTS_SIMPLE})
     target_link_libraries(${dbcsr_ctests_simple} OpenMP::OpenMP_${dbcsr_ctests_link_lang})
   endif ()
   # register C-tests executable that do not need additional arguments with CMake
-  add_test(NAME ${dbcsr_ctests_simple} COMMAND ./${dbcsr_ctests_simple})
-  if (OpenMP_FOUND)
-    set_tests_properties(${dbcsr_ctests_simple} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${TEST_OMP_THREADS})
+  if (NOT CMAKE_SYSTEM_NAME STREQUAL "CrayLinuxEnvironment")
+    add_test(NAME ${dbcsr_ctests_simple} COMMAND ./${dbcsr_ctests_simple})
+    if (OpenMP_FOUND)
+      set_tests_properties(${dbcsr_ctests_simple} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${TEST_OMP_THREADS})
+    endif ()
   endif ()
 endforeach ()
 
