--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -139,6 +139,10 @@ endforeach ()
 # DBCSR LIBRARY
 add_library(dbcsr ${DBCSR_SRCS})
 
+set_target_properties(dbcsr PROPERTIES
+  VERSION ${dbcsr_VERSION}
+  SOVERSION ${VERSION_MAJOR})
+
 if (TARGET PkgConfig::deps)
   target_link_libraries(dbcsr PRIVATE PkgConfig::deps)
 endif ()
@@ -334,6 +338,11 @@ if (WITH_C_API)
   set_target_properties(dbcsr_c PROPERTIES
     LINKER_LANGUAGE Fortran
     )
+
+  set_target_properties(dbcsr_c PROPERTIES
+    VERSION ${dbcsr_VERSION}
+    SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR})
+
   target_link_libraries(dbcsr_c PRIVATE dbcsr)
   target_link_libraries(dbcsr_c PUBLIC MPI::MPI_C)  # the C API always needs MPI
   target_include_directories(dbcsr_c PUBLIC
