--- a/tools/docker/Dockerfile.build-env-ubuntu
+++ b/tools/docker/Dockerfile.build-env-ubuntu
@@ -1,6 +1,8 @@
 FROM ubuntu:18.04
 
 RUN apt-get update \
+    && apt-get install -y software-properties-common \
+    && add-apt-repository ppa:git-core/ppa \
     && apt-get install -y \
         gfortran \
         g++ \
