--- a/tools/docker/Dockerfile.build-env-ubuntu
+++ b/tools/docker/Dockerfile.build-env-ubuntu
@@ -1,12 +1,11 @@
-FROM ubuntu:18.04
+FROM ubuntu:19.10
 
-# Git > 2.17 is needed for GHA to get a proper git repo clone inside the container,
-# using the git-core PPA (and add-apt-repository from the software-properties-common pkg)
-# to get a newer Git version.
+# we need at least Ubuntu 19.10 for:
+#   git > 2.18
+#   lcov > 1.13
+#   openmpi > 2.1
 
 RUN apt-get update \
-    && apt-get install -y software-properties-common \
-    && add-apt-repository ppa:git-core/ppa \
     && apt-get install -y \
         locales \
         gfortran \
