--- a/Makefile.inc
+++ b/Makefile.inc
@@ -12,30 +12,24 @@
 # Variants 3) and 4) requires to use MPI wrappers for the compilation and to specify
 # -D__parallel in the FCFLAGS variable.
 #
-# The 4 variants can be combined with the CUDA compilation. In this case, it further
+# The 4 variants can be combined with the accelerator support. In this case, it further
 # requires:
-# a) set the accelerator compiler variable NVCC:
-#    - for CUDA: e.g. NVCC = nvcc
-#    - for HIP: e.g. HIPCC = hipcc
-# b) specify -D__DBCSR_ACC in FCFLAGS variable
-# c) set the GPUVER variable, e.g. GPUVER = P100 for P100 card
+# a) set the accelerator compiler variable ACC:
+#    - for CUDA: e.g. ACC = nvcc
+#    - for HIP:  e.g. ACC = hipcc
+# b) set the GPUVER variable, e.g. GPUVER = P100 for P100 card (default value if not set)
 #    - for CUDA, possible values correspond to NVIDIA GPUs:
 #      possible values are K20X, K40, K80, P100, V100
-#      TODO check that an NVIDIA GPU is selected, not an AMD one
 #    - for HIP, possible values correspond to NVIDIA and AMD GPUs:
 #      possible values are K20X, K40, K80, P100, V100, Mi50
-# d) set the accelerator compiler flag variable NVFLAGS:
-#     - for CUDA: e.g. NVFLAGS = -O3 -g -w --std=c++11 -D__CUDA
-#     - for HIP: e.g. NVFLAGS = -O3 -g -w --std=c++11 -D__HIP
-#    in the Makefile, the -arch/--amdgpu-target  will be appended with the correct
-#    compute version
-# e) for CUDA: specify the CUDA include path in the CXXFLAGS variable,
+# c) set the accelerator compiler flag variable ACCFLAGS, e.g. ACCFLAGS = -O3 -g -w --std=c++11
+# d) for CUDA: specify the CUDA include path in the CXXFLAGS variable,
 #    e.g. CXXFLAGS += -I${CUDA_PATH}/include
-# f) specify the corresponding accelerator libraries in the LIBS variable,
-#    - e.g. for CUDA: LIBS += -lstdc++ -lcudart -lnvrtc -lcuda
-#    - e.g. for HIP: LIBS += -lstdc++ -lhiprtc
+# e) specify the corresponding accelerator libraries in the LIBS variable,
+#    - e.g. for CUDA: LIBS += -lstdc++ -lcudart -lnvrtc -lcuda -lcublas
+#    - e.g. for HIP:  LIBS += -lstdc++ -lhiprtc -lhipblas
 #
-# Below we present an example for OpenMP+MPI compilation for the GNU compiler.
+# Below we present a default example for OpenMP+MPI compilation for the GNU compiler.
 # Make sure that the env variable $LAPACK_PATH is set.
 #
 # GPU compilation example can be enabled with
@@ -70,23 +64,6 @@ ifneq (,$(LIBXSMM_DIR))
   FCFLAGS += -I${LIBXSMM_DIR}/include -D__LIBXSMM
   LIBS += -L${LIBXSMM_DIR}/lib -lxsmmf -lxsmm -ldl
 endif
-
-#######################################################################################
-#
-# Optional configuration:
-#
-# *** CUBLAS / HIPBLAS ***
-#
-# For multiplications of dense matrices, it can be beneficial to "densify" the matrices
-# and then use DGEMM for the local multiplication. This is the default behavior for the
-# CPU execution, while it requires
-# - for CUDA:
-#   - to link CUBLAS for the GPU execution (LIBS += -lcublas)
-#   - and to specify the macro -D__DBCSR_ACC=2 in the FCFLAGS and NVFLAGS variables.
-# - for HIP:
-#   - to link HIPBLAS for the GPU execution (LIBS += -lhipblas)
-#   - and to specify the macro -D__DBCSR_ACC=3 in the FCFLAGS and HIPFLAGS variables.
-#
 
 #######################################################################################
 #
@@ -141,9 +118,7 @@ endif
 #                            coverage testing, and to avoid core dumps on some
 #                            systems)
 # 6) -D__LIBXSMM           : enable LIBXSMM link (read LIBXSMM section above)
-# 7) -D__DBCSR_ACC         : compile with CUDA support. -D__DBCSR_ACC=2
-#                            enables CUBLAS link (read CUDA support description
-#                            above)
+# 7) -D__DBCSR_ACC         : this macro is automatically added when ACC variable is set
 # 8) -D__ACCELERATE        : must be defined on MacOS when Apple's Accelerate
 #                            framework is used for BLAS and LAPACK (this is due to
 #                            some interface incompatibilities between Accelerate
@@ -194,29 +169,17 @@ LIBS        = -L${LAPACK_PATH}/lib -llapack -lblas
 # and `make GPU=2` to enable GPU acceleration with HIP
 
 ifneq ($(GPU),)
-FCFLAGS    += -D__DBCSR_ACC
 GPUVER      = K40
 ACCFLAGS    = -O3 -g -w --std=c++11
 endif
 
 ifeq ($(GPU),1)
-NVCC        = nvcc
-NVFLAGS     = ${ACCFLAGS} -D__CUDA
-CXXFLAGS   += -I${CUDA_PATH}/include -D__CUDA
+ACC         = nvcc
+CXXFLAGS   += -I${CUDA_PATH}/include
 LIBS       += -lstdc++ -lcudart -lnvrtc -lcuda
-# CUBLAS (off by default)
-#FCFLAGS    := $(subst -D__DBCSR_ACC,-D__DBCSR_ACC=2,$(FCFLAGS))
-#NVFLAGS    += -D__DBCSR_ACC=2
-#LIBS       += -lcublas
 else ifeq ($(GPU),2)
-NVCC        = hipcc
-NVFLAGS     = ${ACCFLAGS} -D__HIP
-CXXFLAGS   += -D__HIP
-LIBS       += -lstdc++
-# HIPBLAS (off by default)
-#FCFLAGS    := $(subst -D__DBCSR_ACC,-D__DBCSR_ACC=3,$(FCFLAGS))
-#NVFLAGS   += -D__DBCSR_ACC=3
-#LIBS       += -lhipblas
+ACC         = hipcc
+LIBS       += -lstdc++ -lhiprtc
 endif
 
 #######################################################################################
