Add warnings and debug flags, add debug travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ env:
   - USE_MPI=ON USE_OPENMP=OFF USE_SMM=blas
   - USE_MPI=OFF USE_OPENMP=OFF USE_SMM=blas
   - USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm
-  - USE_MPI=OFF USE_OPENMP=OFF USE_SMM=libxsmm
+  - USE_MPI=ON USE_OPENMP=ON USE_SMM=libxsmm
+  - USE_MPI=ON USE_OPENMP=ON USE_SMM=libxsmm BUILD_TYPE=Debug
 
 matrix:
   include:
