Adjust tests env for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ env:
   - USE_MPI=ON USE_OPENMP=ON USE_SMM=blas
   - USE_MPI=OFF USE_OPENMP=ON USE_SMM=blas
   - USE_MPI=ON USE_OPENMP=OFF USE_SMM=blas
-  - USE_MPI=OFF USE_OPENMP=OFF USE_SMM=blas
-  - USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm
   - USE_MPI=ON USE_OPENMP=ON USE_SMM=libxsmm
+  - USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm
+  - USE_MPI=ON USE_OPENMP=OFF USE_SMM=libxsmm
   - USE_MPI=OFF USE_OPENMP=OFF USE_SMM=libxsmm
 
 matrix:
