--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
   - LIBXSMM_VERSION=1.14
   - CMAKE_VERSION=3.16.20191124-g54082ed
   - NINJA_VERSION=1.9.0.g99df1.kitware.dyndep-1.jobserver-1
-  jobs:
+  matrix:
   - USE_MPI=ON USE_OPENMP=ON USE_SMM=blas
   - USE_MPI=OFF USE_OPENMP=ON USE_SMM=blas
   - USE_MPI=ON USE_OPENMP=OFF USE_SMM=blas
@@ -42,10 +42,10 @@ env:
   - USE_MPI=ON USE_OPENMP=OFF USE_SMM=libxsmm
   - USE_MPI=OFF USE_OPENMP=OFF USE_SMM=libxsmm
 
-jobs:  # the following jobs inherit only the first OS
+matrix:  # the following jobs inherit only the first OS
   exclude:
     - os: osx
-      env: LIBXSMM_VERSION=1.14 CMAKE_VERSION=3.16.20191124-g54082ed NINJA_VERSION=1.9.0.g99df1.kitware.dyndep-1.jobserver-1 USE_MPI=ON USE_OPENMP=ON USE_SMM=blas
+      env: USE_MPI=ON USE_OPENMP=ON USE_SMM=blas
     - os: osx
       env: USE_MPI=OFF USE_OPENMP=ON USE_SMM=blas
     - os: osx
@@ -53,6 +53,8 @@ jobs:  # the following jobs inherit only the first OS
     - os: osx
       env: USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm
   include:
+     os: linux
+     python: 3.6
   - name: "Run pre-commit hook on changed files"
     if: tag IS NOT present
     script:
