--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,6 @@ matrix:
   include:
     - os: linux
       python: 3.6
-
-matrix:
   exclude:
     - os: osx
       env: USE_MPI=ON USE_OPENMP=ON USE_SMM=blas
@@ -58,7 +56,7 @@ matrix:
     - os: osx
       env: USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm      
 
-matrix:  # the following jobs inherit only the first OS
+jobs:  # the following jobs inherit only the first OS
   - name: "Run pre-commit hook on changed files"
     if: tag IS NOT present
     script:
