--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
   - LIBXSMM_VERSION=1.14
   - CMAKE_VERSION=3.16.20191124-g54082ed
   - NINJA_VERSION=1.9.0.g99df1.kitware.dyndep-1.jobserver-1
-  matrix:
+  jobs:
   - USE_MPI=ON USE_OPENMP=ON USE_SMM=blas
   - USE_MPI=OFF USE_OPENMP=ON USE_SMM=blas
   - USE_MPI=ON USE_OPENMP=OFF USE_SMM=blas
@@ -42,10 +42,8 @@ env:
   - USE_MPI=ON USE_OPENMP=OFF USE_SMM=libxsmm
   - USE_MPI=OFF USE_OPENMP=OFF USE_SMM=libxsmm
 
-matrix:
-  include:
-    - os: linux
-      python: 3.6
+#jobs:
+#  include:
 
 jobs:  # the following jobs inherit only the first OS
   exclude:
@@ -58,6 +56,9 @@ jobs:  # the following jobs inherit only the first OS
     - os: osx
       env: USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm
 
+  include:
+  - os: linux
+      python: 3.6
   - name: "Run pre-commit hook on changed files"
     if: tag IS NOT present
     script:
