--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ jobs:  # the following jobs inherit only the first OS
     - os: osx
       env: USE_MPI=OFF USE_OPENMP=ON USE_SMM=blas
     - os: osx
+      env: USE_MPI=ON USE_OPENMP=OFF USE_SMM=blas
+    - os: osx
       env: USE_MPI=ON USE_OPENMP=ON USE_SMM=libxsmm
     - os: osx
       env: USE_MPI=OFF USE_OPENMP=ON USE_SMM=libxsmm
