Makefile limited to CP2K only, MISC improvements (#307)
* Simply Makefile targets

* GPU flags set by default

* Remove Makefile from the documentation

* Makefile only available for CP2K (initial step)

* move files related to makefile to hidden .cp2k directory

* Move makefile to .cp2k directory and document it

* Update README.md

* Override flags for ACC

* Do not set __DBCSR_ACC if input configuration is provided

* Add more MACROS description

* Remove C-bindings from CP2K

* Move build variants

* add overview image

* First draft of flags and macros

* Add Macros

* Comment macros

* Add error on warnings

* Add warnings and debug flags, add debug travis test

* Add debugging symbols to coverage compilation

* Avoid uninitialized error on cmake test

* Add more debugging flags

* Add more compiler checks (FPE traps...)

* Update travis VM

* Update tested compilers

* Fix broken symb link

* Makefile requires only BLAS

* Avoid RMA for OpenMPI 2.1 and 3.1

* Adjust tests env for travis

* Fix travis 

* Fix maybe-uninitialized

* Remote test on macOS with BLAS because of FPE in BLAS

* Remove warnings for conversion

* Remove reloc for matmul

* Upgrade to cmake 3.12

* Remove warning on type conversion

* Include Shoshana's comment for HIP compilation

* Add Shoshana's suggestion on user gender

* Add compiler flags to the documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.10)
+cmake_minimum_required (VERSION 3.12)
 
 # include our cmake snippets
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
@@ -111,18 +111,16 @@ find_package(PkgConfig)
 # In CMake <3.15, the system is searched before the virtual environment.
 if (NOT Python_EXECUTABLE)
     # If the python interpreter isn't specified as a command line option, look for it:
-    if (CMAKE_VERSION VERSION_LESS 3.12)
-      find_package(PythonInterp REQUIRED)
-      set(Python_EXECUTABLE ${PYTHON_EXECUTABLE})
-    else ()
-      find_package(Python COMPONENTS Interpreter REQUIRED)
-    endif ()
+    find_package(Python COMPONENTS Interpreter REQUIRED)
 endif ()
 
 # =================================== MPI
 if (USE_MPI)
   get_property(REQUIRED_MPI_COMPONENTS GLOBAL PROPERTY ENABLED_LANGUAGES)
   list(REMOVE_ITEM REQUIRED_MPI_COMPONENTS CUDA)  # CUDA does not have an MPI component
+  if (NOT CMAKE_CROSSCOMPILING)  # when cross compiling, assume the users know what they are doing
+     set(MPI_DETERMINE_LIBRARY_VERSION TRUE)
+  endif ()
   find_package(MPI COMPONENTS ${REQUIRED_MPI_COMPONENTS} REQUIRED)
 
   if (NOT MPI_Fortran_HAVE_F90_MODULE)
@@ -130,6 +128,11 @@ if (USE_MPI)
 The listed MPI implementation does not provide the required mpi.mod interface. \
 When using the GNU compiler in combination with Intel MPI, please use the \
 Intel MPI compiler wrappers. Check the INSTALL.md for more information.")
+  endif ()
+  if ("${MPI_Fortran_LIBRARY_VERSION_STRING}" MATCHES "Open MPI v2.1" OR "${MPI_Fortran_LIBRARY_VERSION_STRING}" MATCHES "Open MPI v3.1")
+     message(WARNING
+            "RMA with ${MPI_Fortran_LIBRARY_VERSION_STRING} is not supported due to issues with its implementation."
+            " Please use a newer version of OpenMPI or switch to MPICH if you plan on using MPI-RMA.")
   endif ()
 endif ()
 
