--- a/.travis.yml
+++ b/.travis.yml
@@ -158,6 +158,7 @@ after_success:
       cd build
       ls
       pwd
+      /usr/bin/lcov --help
       cmake --build . -- cov-info
       bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
     fi
